[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/deerScene.gd" type="Script" id=1]
[ext_resource path="res://Assets/icon.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Objects/Background/Tilesets_Terrain/grass-night-1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/download.jpg" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "fadeIn"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0.294118 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fadeOut"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.294118 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "filterIn"
tracks/0/type = "value"
tracks/0/path = NodePath("download:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.27451 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "filterOut"
tracks/0/type = "value"
tracks/0/path = NodePath("download:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.27451 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "enter"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -613.61, 144.37 ), Vector2( 100, 144.37 ) ]
}

[sub_resource type="Animation" id=6]
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("deerVoice:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="Deer" type="Sprite" parent="."]
position = Vector2( 378.389, 148.309 )
rotation = -3.14118
texture = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="grass-night-1" type="Sprite" parent="."]
position = Vector2( 385.5, 248.427 )
texture = ExtResource( 3 )

[node name="grass-night-2" type="Sprite" parent="."]
position = Vector2( 86.2072, 248.757 )
texture = ExtResource( 3 )

[node name="grass-night-3" type="Sprite" parent="."]
position = Vector2( -214.436, 248.757 )
texture = ExtResource( 3 )

[node name="grass-night-4" type="Sprite" parent="."]
position = Vector2( -475.676, 248.757 )
texture = ExtResource( 3 )

[node name="Player" type="Sprite" parent="."]
position = Vector2( -613.61, 144.37 )
texture = ExtResource( 2 )

[node name="bgAnim" type="AnimationPlayer" parent="."]
anims/fadeIn = SubResource( 1 )
anims/fadeOut = SubResource( 2 )
anims/filterIn = SubResource( 3 )
anims/filterOut = SubResource( 4 )

[node name="deerVoice" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -229.0
margin_top = -97.0
margin_right = 227.0
margin_bottom = 6.0
text = "This is a test."
align = 1
valign = 1
autowrap = true

[node name="dragonVoice" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -229.0
margin_top = -97.0
margin_right = 227.0
margin_bottom = 6.0
text = "This is a test."
align = 1
valign = 1
autowrap = true

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.294118 )
position = Vector2( -0.162235, 0.260328 )
scale = Vector2( 18.9988, 11.958 )
texture = ExtResource( 2 )

[node name="PlyAnim" type="AnimationPlayer" parent="."]
anims/enter = SubResource( 5 )
anims/textCycle = SubResource( 6 )

[node name="download" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 3.89832, 3.86168 )
texture = ExtResource( 4 )

[connection signal="animation_finished" from="bgAnim" to="." method="_on_bgAnim_animation_finished"]
[connection signal="animation_finished" from="PlyAnim" to="." method="_on_PlyAnim_animation_finished"]
